vlib/v/checker/tests/prefix_expr_decl_assign_err.out
vlib/v/checker/tests/prefix_expr_decl_assign_err.vv:2:2: error: cannot use a reference on the left side of `:=`
    1 | fn main() {
    2 |     &a := 12
      |     ^
    3 |     (*d) := 14
    4 | }
vlib/v/checker/tests/prefix_expr_decl_assign_err.vv:2:2: error: non-name on the left side of `:=`
    1 | fn main() {
    2 |     &a := 12
      |     ^
    3 |     (*d) := 14
    4 | }
vlib/v/checker/tests/prefix_expr_decl_assign_err.vv:3:2: error: parentheses are not supported on the left side of `:=`
    1 | fn main() {
    2 |     &a := 12
    3 |     (*d) := 14
      |     ~~~~
    4 | }
vlib/v/checker/tests/prefix_expr_decl_assign_err.vv:3:7: error: modifying variables via dereferencing can only be done in `unsafe` blocks
    1 | fn main() {
    2 |     &a := 12
    3 |     (*d) := 14
      |          ~~
    4 | }
vlib/v/checker/tests/prefix_expr_decl_assign_err.vv:3:3: error: non-name on the left side of `:=`
    1 | fn main() {
    2 |     &a := 12
    3 |     (*d) := 14
      |      ^
    4 | }
